--- a/problem/index.html
+++ b/problem/index.html
@@ -57,6 +57,10 @@
     </div>
   </div>
 
+  <script src="./js/functions.js"></script>
+  <script src="./js/array_functions.js"></script>
+  <script src="./js/database.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
