--- a/problem/index.html
+++ b/problem/index.html
@@ -6,10 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exchange</title>
-<<<<<<< Updated upstream
-=======
   <script src="./js/database.js"></script>
->>>>>>> Stashed changes
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/programme.css">
   <link rel="stylesheet" href="css/filters.css">
@@ -62,12 +59,12 @@
   </div>
   <script src="./js/array_functions.js"></script>
   <script src="./js/functions.js"></script>
-<<<<<<< Updated upstream
-  <script src="./js/array_functions.js"></script>
-  <script src="./js/database.js"></script>
-=======
->>>>>>> Stashed changes
-  <script src="index.js"></script>
+  <<<<<<< Updated upstream <script src="./js/array_functions.js">
+    </script>
+    <script src="./js/database.js"></script>
+    =======
+    >>>>>>> Stashed changes
+    <script src="index.js"></script>
 </body>
 
 </html>
