--- a/problem/index.html
+++ b/problem/index.html
@@ -57,6 +57,7 @@
       </div>
     </div>
   </div>
+  <script src="./js/aux_functions.js"></script>
   <script src="./js/array_functions.js"></script>
   <script src="./js/functions.js"></script>
   <script src="index.js"></script>
